bring back WEB-INF lookup for EDStatic